# YoutubeOS

./: Binaries.asm  CMakeLists.txt  Compile.bat  DetectMemory.asm  DiskRead.asm  ExtendedProgram.asm  Heap.cpp  Heap.h  IDT.cpp  IDT.h  IO.cpp  IO.h  KBScanCodeSet1.cpp  Kernel.cpp  Keyboard.cpp  Memory.cpp  Memory.h  MemoryMap.cpp  MemoryMap.h  Operating System YT.vcxproj  Operating System YT.vcxproj.filters  README.txt  SimplePaging.asm  TextModeColorCodes.h  TextPrint.cpp  TextPrint.h  Typedefs.cpp  bochsrc.bxrc  bootloader.asm  compileasm.bat  gdt.asm  link.ld  print.asm
VM/power/: shutdown.cpp  shutdown.h
src/: CPUID.asm  DiskRead.asm  Heap.cpp  IDT.asm  Kernel.cpp  Keyboard.cpp  Keyboard.h  SimplePaging.asm  TextPrint.cpp
